# medical_report_qa

./: .gitignore  Medical_QA_Documentation.docx  README.md  app.py  architecture.md  main.py  pyproject.toml  rag_pipeline.py  requirements.txt  style.css  utils.py
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.css  layout.js  page.css  page.js
frontend/components/: ChatBox.css  ChatBox.js  RelevanceChart.css  RelevanceChart.js  Sidebar.css  Sidebar.js  UploadZone.css  UploadZone.js
frontend/lib/: api.js
src/: api.py  llm_answer.py  medical_datasets.py  rag_pipeline.py  style.css  utils.py
