[project]
name = "dr-transcript"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "langchain>=0.3.0,<1.0.0",
    "langchain-community>=0.3.0,<1.0.0",
    "langchain-groq>=0.2.0",
    "langchain-huggingface>=0.1.0",
    "pymilvus>=2.5.0,<2.6.0",
    "langchain-milvus>=0.2.1",
    "langchain-text-splitters>=0.3.0",
    "pandas>=3.0.2",
    "pillow>=12.2.0",
    "plotly>=6.7.0",
    "pymupdf>=1.27.2.3",
    "python-dotenv>=1.2.2",
    "sentence-transformers>=5.4.1",
    "streamlit>=1.57.0",
]